<resources>
    <string name="app_name">Coop Achievement</string>
    <string name="EnterNumberOfPlayers">   Enter number of players</string>
    <string name="show_level">Show Level</string>
    <string name="levelList">Level List</string>
    <string name="add_game_play">add game play</string>
    <string name="create">create</string>
    <string name="game_played">Game Played</string>
    <string name="number_of_players">Number of Players</string>
    <string name="score_of_all_players">Score of All Players</string>
    <string name="congratulations">Congratulations!</string>
    <string name="score_of_players">Score of Players</string>
    <string name="difficulty">Difficulty</string>
    <string name="delete">Delete</string>
    <string name="select_player">Select Player</string>
    <string name="total_score">Total Score</string>
    <string name="score">Score</string>
    <string name="save">Save</string>
    <string name="first_game_play">\nWelcome, this page lists all the games played.\n\n Currently,
    there are no games played.\n\n
        To begin, please first click on the\n \"Add game play\" button.</string>
    <string name="first_game_spinner">No Games Played</string>
    <string name="helper_arrow">Helper directional arrow</string>
    <string name="help">
1. If there is no configuration or you want to create a new config when you add a new game:\n
        CONFIGURATION -> ADD NEW CONFIG, then you can enter a proper name and expected scores to add it. \n\n
2. If you want to edit or delete a configuration:\n
        CONFIGURATION -> EDIT CONFIG / DELETE CONFIG, then choose one to edit or delete it.\n\n
3. If you want to view the achievement level list:\n
        CONFIGURATION -> VIEW ACHIEVEMENT, then you can choose one and enter the player number to view it. \n\n
4. If you want to add a new game for an existed configuration:\n
        GAME PLAYS -> ADD GAME PLAY, then choose one, enter player number and total score to create it. \n\n
5. If you want to see the game history:\n
        GAME PLAYS, then you can see a list of game history.
    </string>
    <string name="add_a_new_configuration_n_when_you_first_play_the_game">Add a new configuration \n when you FIRST time play the game</string>
    <string name="AboutPage">About</string>
    <string name="AuthorTitle">Team 7-Oxygen Authors</string>
    <string name="AuthorNames">Xinyu (Lucas)\nZekai (Josh)\nSina\nRaymond</string>
    <string name="ResTitle">Resource Sources</string>
    <string name="ResList">FrontPage: https://alliancecpha.org/en/child-protection-humanitarian-action-and-education-emergencies\n
Bear: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
Bike: https://shorturl.at/oZ269\n
Bird: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
Bronze: https://www.pngall.com/bronze-medal-png/download/16592\n
Bus: https://www.alamy.com/mini-bus-icon-cartoon-style-image444191328.html\n
Calculator: https://shorturl.at/fisU3\n
Car: https://pngtree.com/freepng/car-icon-cartoon-style_5203408.html\n
Cogbg: https://www.pngitem.com/middle/hbJimbw_gear-clipart-gray-settings-png-transparent-png\n
Diamond: https://pixabay.com/vectors/diamond-precious-stone-gem-158431\n
Dog: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
Elephant: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
Gold: https://blackhorsehill.andrewgreenhalgh.co.uk/gold-medal-award-winners\n
GrandMaster: https://shorturl.at/EJK15\n
Helicopter: https://shorturl.at/uXYZ2\n
HelperArrow: https://www.pngfind.com/mpng/hmTTbib_file-u-2197-svg-arrow-top-right-hd\n
Iron: https://en.wikipedia.org/wiki/Charcoal#/media/File:Charcoal_8.jpg\n
Lion: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
Master: https://iconscout.com/icon/master-badge-1486614\n
Motorbike: https://id.pngtree.com/freepng/scooter_3637448.html\n
Plane: https://shorturl.at/dfqvY\n
Player: https://thenounproject.com/icon/game-player-1054845\n
Platinum: https://www.dronecode.org/wp-content/uploads/sites/24/2019/10/platinum-medal.png\n
Questionbg: https://www.involve.me/blog/5-question-types-to-use-in-quizzes-for-higher-response-rate\n
Sheep: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
Silver: https://www.123rf.com/photo_56089284_a-gold-silver-bronze-badge.html\n
Tiger: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
Train: https://www.alamy.com/stock-photo-modern-high-speed-train-icon-cartoon-style-140818019.html\n
Yacht: https://www.alamy.com/yacht-icon-cartoon-style-image444195655.html\n
Zebra: https://pngtree.com/freepng/cute-animal-cartoon-figure_5440344.html\n
        </string>
    <string name='achieveStats'> Achievement Statistics</string>
</resources>