<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlays"
    android:background="@color/bluebg">

    <Button
        android:id="@+id/firstgameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/minecraft"
        android:text="@string/add_game_play"
        app:layout_constraintStart_toEndOf="@+id/firstgameSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstgameSpinner"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/minecraft"
        android:gravity="center"
        android:text="@string/first_game_spinner"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstgameHelp"
        android:layout_width="415dp"
        android:layout_height="533dp"
        android:layout_marginTop="196dp"
        android:fontFamily="@font/minecraft"
        android:gravity="top|center_horizontal"
        android:text="@string/first_game_play"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="122dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/helper_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstgameButton"
        app:srcCompat="@drawable/helper_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>