<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calculatorbg">

    <TextView
        android:id="@+id/playersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="172dp"
        android:text="@string/select_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/playerNumberSpinner"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playersText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/totalScoreText"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editScoreTextEdit" />

    <TextView
        android:id="@+id/totalScoreTextValue"
        android:layout_width="146dp"
        android:layout_height="22dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editScoreTextEdit" />

    <EditText
        android:id="@+id/editScoreTextEdit"
        android:layout_width="258dp"
        android:layout_height="43dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/score"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerNumberSpinner"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/submitScoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalScoreTextValue" />

</androidx.constraintlayout.widget.ConstraintLayout>